feat: update documentation for pattern matching in switch, enhancing clarity and examples